Override VJS caption font to prevent double spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -142,6 +142,7 @@ video/poster area the controls are displayed correctly. */
     .vjs-text-track-cue {
       inset: auto 0px 20px !important;
       height: auto !important;
+      font: 0px sans-serif !important;
     }
 
     .vjs-text-track-cue > div {
@@ -154,6 +155,7 @@ video/poster area the controls are displayed correctly. */
     .vjs-text-track-cue {
       inset: auto 0px 20px !important;
       height: auto !important;
+      font: 0px sans-serif !important;
     }
 
     .vjs-text-track-cue > div {
